--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
   <div class="top-container">
-      <img class="cloud" src="images/programmer-bro.png" alt="Cloud-image">
+      <img class="cloud" src="images/Programmer-bro.png" alt="Cloud-image">
 
       <h1 class="intro">I'm Komail</h1>
       <p class="intro programmer">a programmer.</p>
